# hyphaplugins

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  hyphaplugins-config.cmake
cmake/: CompileOptions.cmake
data/: pythonbaseplugin.py  rpigpio.py  rpipir.py
deploy/: CMakeLists.txt
source/: CMakeLists.txt
source/deepnetvideo/: CMakeLists.txt
source/deepnetvideo/include/hyphaplugins/deepnetvideo/: deepnetvideo.h
source/deepnetvideo/source/: deepnetvideo.cpp
source/dht11/: CMakeLists.txt
source/dht11/include/hyphaplugins/dht11/: dht11.h
source/dht11/source/: dht11.cpp
source/email/: CMakeLists.txt
source/email/include/hyphaplugins/email/: email.h
source/email/source/: email.cpp
source/espeak/: CMakeLists.txt
source/espeak/include/hyphaplugins/espeak/: espeak.h
source/espeak/source/: espeak.cpp
source/explorenfc/: CMakeLists.txt
source/explorenfc/include/hyphaplugins/explorenfc/: explorenfc.h
source/explorenfc/source/: explorenfc.cpp
source/fingerprintzfm/: CMakeLists.txt
source/flame/: CMakeLists.txt
source/flame/include/hyphaplugins/flame/: flame.h
source/flame/source/: flame.cpp
source/lightsensor/: CMakeLists.txt
source/lightsensor/include/hyphaplugins/lightsensor/: lightsensor.h
source/lightsensor/source/: lightsensor.cpp
source/pythonplugin/: CMakeLists.txt
source/pythonplugin/include/hyphaplugins/pythonplugin/: pythonplugin.h
source/pythonplugin/source/: pythonplugin.cpp
source/rfid/: CMakeLists.txt
source/rfid/include/hyphaplugins/rfid/: rfid.h
source/rfid/source/: rfid.cpp
source/rpianalogsensor/: CMakeLists.txt
source/rpianalogsensor/include/hyphaplugins/rpianalogsensor/: rpianalogsensor.h
source/rpianalogsensor/source/: rpianalogsensor.cpp
source/rpigpio/: CMakeLists.txt
source/rpigpio/include/hyphaplugins/rpigpio/: rpigpio.h
source/rpigpio/source/: rpigpio.cpp
source/rpiled/: CMakeLists.txt
source/rpiled/include/hyphaplugins/rpiled/: rpiled.h
source/rpiled/source/: rpiled.cpp
source/rpipir/: CMakeLists.txt
source/rpipir/source/: rpipir.cpp
source/tests/: CMakeLists.txt
source/tests/deepnetvideo-test/: CMakeLists.txt  deepnetvideo_test.cpp
source/video/: CMakeLists.txt
source/video/include/hyphaplugins/video/: video.h
source/video/source/: requesthandlerfactory.cpp  roothandler.cpp  streamhandler.cpp  streamserver.cpp  video.cpp
source/watersensor/: CMakeLists.txt
source/watersensor/include/hyphaplugins/watersensor/: watersensor.h
source/watersensor/source/: watersensor.cpp
source/wifi/: CMakeLists.txt
source/wifi/include/hyphaplugins/wifi/: wifi.h
source/wifi/source/: wifi.cpp
